fixed new users having default profile pics and mail

--- a/templates/mails/auth/register_success.html
+++ b/templates/mails/auth/register_success.html
@@ -4,7 +4,7 @@
     <div style="background-color:white;border:0.1px solid #000321;border-radius:10px 10px 0px 0px;padding:10px 14px;font-size: 15px;">
     <p>Hi I’m David, thank you {{ user.username }} for creating an account with us. I specially welcome you to a platform
         that rewards <a href="http://topplaysports.com">topplayers</a>.</p>
-    <p>I want to make sure you get the most out of <a href="http://topplaysports.com"><b>Topplaysport.com</b></a></p>
+    <p>I want to make sure you get the most out of <a href="http://topplaysports.com"><b>Topsport.com</b></a></p>
         <p><a href="http://topplaysports.com">Topplaysport</a> is a competitive soccer prediction site where participants compete against themselves to be among the top 20 players who will get a guaranteed <strong>NGN 2,000</strong> each everyday.</p>
     <h3 style="margin-left: 10px; color: #0b0b0b; font-size: 19px;margin-bottom: 5px;padding-bottom: 0px !important">1. HOW TO PLAY THE GAME</h3>
     <ul>
