finished manual deposit

--- a/templates/bets/mybets.html
+++ b/templates/bets/mybets.html
@@ -26,13 +26,13 @@
 
                     {% if num_bets < 5 %}
                         <div class="alert alert-warning">
-                            Play {{ remaining_bets }} more slips to get  a guaranteed NGN200 bonus instantly and a chance to win NGN1,000 cash in the free weekend giveaway
+                            Play {{ remaining_bets }} more slips to get  a guaranteed NGN100 bonus instantly and a chance to win NGN1,000 cash in the free weekend giveaway
                         </div>
                     {% else %}
                         {% if raffle_id %}
                             <div class="alert alert-success">
                                 You have have qualified for the free weekend giveaway. Your raffle id is
-                                <strong>{{ raffle_id }}</strong> you have also been credited with NGN200 bonus
+                                <strong>{{ raffle_id }}</strong> you have also been credited with NG100 bonus
                             </div>
                         {% else %}
                             <div class="alert alert-success">
