--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -44,14 +44,14 @@
                                                 <button class="btn btn-link" type="button" data-toggle="collapse"
                                                         data-target="#collapseOne" aria-expanded="true"
                                                         aria-controls="collapseOne"><i
-                                                        class="fa fa-question-circle"></i>WHAT IS TOPPLAYSPORT?
+                                                        class="fa fa-question-circle"></i>WHAT IS TOPSPORT?
                                                 </button>
                                             </h2>
                                         </div>
                                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                              data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Topplaysport is a competitive soccer prediction site where
+                                                <p>Topsport is a competitive soccer prediction site where
                                                     participants
                                                     compete against themselves for a share in guaranteed daily cash
                                                     reward. They
@@ -84,8 +84,8 @@
                                                     predictions correct (40/40) to win. You just have to be among the
                                                     top 20 users
                                                     with the highest point in order to partake in a share of the daily
-                                                    cash reward.
-                                                    So your chances of winning depends on the general performance of
+                                                    cash reward.<br>
+                                                    Your chances of winning depends on the general performance of
                                                     other
                                                     players.</p>
                                             </div>
@@ -181,16 +181,16 @@
                                                 <button class="btn btn-link collapsed" type="button"
                                                         data-toggle="collapse" data-target="#collapseSix"
                                                         aria-expanded="false" aria-controls="collapseSix"><i
-                                                        class="fa fa-question-circle"></i>SOCCER QUIZ
+                                                        class="fa fa-question-circle"></i>SOCCER TRIVIA
                                                 </button>
                                             </h2>
                                         </div>
                                         <div id="collapseSix" class="collapse" aria-labelledby="headingSix"
                                              data-parent="#accordionExample2">
                                             <div class="card-body">
-                                                <p>This is an instant way of making cool cash on the platform, all you need to do is
-to answer 3 questions correctly about one soccer game and win NGN10,000
-instantly with as little as NGN20.</p>
+                                                <p>If you do not have enough money to play the daily game, our soccer trivia has got you covered, all you need to do is
+to answer 3 questions correctly about one soccer game and win NGN1,000 to your bonus account
+instantly, you can now use this bonus to particpate in the daily games.</p>
                                             </div>
                                         </div>
                                     </div><!-- card end -->
@@ -209,7 +209,7 @@ instantly with as little as NGN20.</p>
                                             <div class="card-body">
                                                 <p>If you need quick help you can chat with our online customer care
                                                     assistant or you can email us at <a
-                                                            href="mailto:help@topplaysport.com">help@topplaysport.com</a>
+                                                            href="mailto:help@topsport.com">help@topsport.com</a>
                                                 </p>
                                             </div>
                                         </div>
