--- a/templates/how_to_play.html
+++ b/templates/how_to_play.html
@@ -68,7 +68,7 @@
                                                 <li class="mt-1">
                                                     After making these selections click play and an entry fee of NGN100
                                                     is
-                                                    deducted from your Topplaysport account.
+                                                    deducted from your Topsport account.
                                                 </li>
                                                 <li class="mt-1">
                                                     All your active and concluded games can be seen in the <a
@@ -143,7 +143,7 @@
                                                     there predictions
                                                 </li>
                                                 <li class="mt-1">
-                                                    Their Topplaysport main account is immediately credited.
+                                                    Their Topsport main account is immediately credited.
                                                 </li>
                                                 <li class="mt-1">
                                                     These winners are proudly displayed on the <a href="/bets/winners">Winners
@@ -230,7 +230,7 @@
                                                 <p>
                                                 <li class="mt-1">
                                                     A user can get a NGN100 bonus by referring a friend to
-                                                    register on Topplaysport.com using the user’s referral
+                                                    register on Topsport.com using the user’s referral
                                                     code, this code is the same as your username located at the GET
                                                     BONUS section on the menu bar
                                                 </li>
@@ -301,7 +301,7 @@
                                                 <p class="mt-1">
                                                     <strong>NOTE: after the first successful withdrawal the user’s bank
                                                         account details are automatically saved and the
-                                                        Topplaysport login password will be required to change
+                                                        Topsport login password will be required to change
                                                         these bank account detail.</strong>
                                                 </p>
                                             </div>
