--- a/templates/site_admin/layouts/base.html
+++ b/templates/site_admin/layouts/base.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png"> {% endcomment %}
     <!-- CSRF Token -->
     <meta name="csrf-token" content="{{ csrf_token }}">
-    <link rel="icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'images/logos/favicon.png' %}" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>
         {% block page_title %}Admin{% endblock %}
