--- a/templates/support.html
+++ b/templates/support.html
@@ -116,8 +116,8 @@
                         <dl>
                             <dt>E-mail</dt>
                             <dd><span class="icon icon-primary mdi mdi-email-outline"></span><a class="link"
-                                                                                                href="mailto:support@topplaysport.com"><span
-                                    class="__cf_email__">support@topplaysport.com</span></a></dd>
+                                                                                                href="mailto:support@topsport.com"><span
+                                    class="__cf_email__">support@topsport.com</span></a></dd>
                         </dl>
                         <dl>
                             <dt>Social Media</dt>
