--- a/templates/mails/layouts/footer.html
+++ b/templates/mails/layouts/footer.html
@@ -1,5 +1,5 @@
 <div class="footer" style="background-color:#000321;font-size:13px;color:white;border:0.1px solid #000321;">
-    <p style="margin:10px 0px 0px 30px;">Contact us: support@topplaysport.com</p>
+    <p style="margin:10px 0px 0px 30px;">Contact us: support@topsport.com</p>
     <br>
     <p style="margin:0px 0px 0px 30px;"><a href="https://web.facebook.com/pg/Topplaysport-104500274229137/posts/?ref=page_internal"><img
             src="http://topplaysport.com/static/images/misc/icons/facebook.png"
@@ -12,5 +12,5 @@
 {#    <p style="margin:0px 0px 0px 30px;">+18 Gambling</p>#}
 
     <br>
-    <p style="text-align:center">Topplaysport {% now 'Y' %}. All rights reserved </p>
+    <p style="text-align:center">Topsport {% now 'Y' %}. All rights reserved </p>
 </div>
