--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -39,12 +39,12 @@
                             <div class="col-12 text-center">
                                 <h4 class="text-uppercase mt-2">Privacy Policy</h4>
                                 <p class="mt-2">
-                                    This Privacy Policy is agreed between you and Topplaysport s corporate entities (Topplaysport , We, Us
-or Our as appropriate). Topplaysport will only process your personal data for the purposes for which it
+                                    This Privacy Policy is agreed between you and Topsport's corporate entities (Topsport , We, Us
+or Our as appropriate). Topsport will only process your personal data for the purposes for which it
 collected it, namely to provide you with an online betting service.
                                 </p>
                                 <p class="mt-2">
-                                    Topplaysport does not normally share your data with any other third parties; however, at times we may
+                                    Topsport does not normally share your data with any other third parties; however, at times we may
 be required by law or legal process to disclose your personal information. We may also disclose
 information about you if we believe that disclosure is necessary for the public interest.
                                 </p>
@@ -54,7 +54,7 @@ personal information as set out in this Privacy Policy. If you do not agree with
 Policy please do not use the Website or otherwise provide us with your personal information.
                                 </p>
                                 <p class="mt-2">
-Your privacy is important to Topplaysport . We follow closely the laws and ensure legality. We
+Your privacy is important to Topsport . We follow closely the laws and ensure legality. We
 endeavour to keep your personal information protected at all times by implementing adequate
 technical and organizational controls. Please take a moment to read the following policy to learn how
 we handle your personal information, as your use of our services will indicate your acceptance of its
@@ -66,27 +66,27 @@ and statistical purposes; for security and control and for the smooth provision 
 to time, we may also use your personal information to contact you by mail, email, telephone or mobile
 phone to introduce you to our products or any events, activities, projects, plans, developments,
 undertakings and special offers taking place, being promoted or supported by us. The data supplied by
-you upon registering online or thereafter shall be kept by Topplaysport and will solely by used to
+you upon registering online or thereafter shall be kept by Topsport and will solely by used to
 determine the legality of registration and activity on the Website. By supplying us with your information
 you confirm that you do not consider use of your information in accordance with this Privacy Policy to
 be a breach of your rights under The Act. We encourage you to contact us at any time and remind you of
 your right to opt out at any time from receiving any promotional or marketing materials from us..
                                 </p>
                                 <p class="mt-2">
-As a policy Topplaysport will not disclose any personal information to anyone other than those
+As a policy Topsport will not disclose any personal information to anyone other than those
 employees that need access to your data to provide you with a service. We may, however, be required
 by law or legal process to disclose your personal information to authorities.
                                 </p>
                                 <p class="mt-2">
-Topplaysport safeguards the security of the data you provide us with physical, electronic, and
+Topsport safeguards the security of the data you provide us with physical, electronic, and
 managerial procedures. Please note that we cannot guarantee that any data transmitted over the
 Internet is completely secure. Accordingly, we encourage you to take every precaution to protect your
 personal data when you are on the Internet.
                                 </p>
                                 <p class="mt-2">
-The Management of Topplaysport together with the Fraud Team will have the right to access the
+The Management of Topsport together with the Fraud Team will have the right to access the
 submitted personal information relating to the registered players. You always have a right of access the
-information we have about you. To review and update your personal contact information, simply contact Topplaysport and you will be provided with information about your personal data we hold. If
+information we have about you. To review and update your personal contact information, simply contact Topsport and you will be provided with information about your personal data we hold. If
 you prefer you may contact our Customer Service using the contact details available on the site.
 Additionally, you have the right to have any inaccurate information corrected and where applicable,
 erased. It is our right to ask you to provide us with a written request for information we hold about you.
