--- a/templates/site_admin/layouts/sidebar.html
+++ b/templates/site_admin/layouts/sidebar.html
@@ -71,8 +71,14 @@
             </li>
             <li class="nav-item  {% if request.path == '/admin/trivia' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'myadmin:trivia' %}">
-                    <i class="fa fa-trophy"></i>
+                    <i class="fa fa-book"></i>
                     <p>Trivia</p>
+                </a>
+            </li>
+            <li class="nav-item  {% if request.path == '/admin/trivia' %}active{% endif %}">
+                <a class="nav-link" href="{% url 'myadmin:deposit' %}">
+                    <i class="fa fa-dollar"></i>
+                    <p>Manual Deposits</p>
                 </a>
             </li>
             <li class="nav-item ">
