--- a/templates/terms.html
+++ b/templates/terms.html
@@ -40,9 +40,9 @@
                                 <h4 class="text-uppercase">General Terms and conditions</h4>
                                 <p class="mt-2">
 These general Terms and Conditions Terms and Conditions or T&amp;C) shall apply to all aspects of use of
-the website www.Topplaysport.com(the website), the Account and the services operated by Correttezza
-Technologies (Correttezza ) (a company duly organized under the laws of Nigeria, with business
-registration RC 1603870) via the website. Topplaysport shall offer it&#39;s services through various channels
+the website www.Topsport.com(the website), the Account and the services operated by Topsport
+Technologies (Topsport ) (a company duly organized under the laws of Nigeria, with business
+registration RC 1603870) via the website. Topsport shall offer it&#39;s services through various channels
 not limited to POS, SMS, USSD hereon referred to as the service.
                                 </p>
                                 <p class="mt-2">
@@ -63,8 +63,8 @@ between the Customer and the Company and supersede and merge all prior agreement
 representations and understandings.
                                 </p>
                                 <p class="mt-2">
-Topplaysport does not accept any Users under the age of 18 and applications from any form of
-incorporated or unincorporated legal entity. Topplaysport reserves the right to verify and exclude
+Topsport does not accept any Users under the age of 18 and applications from any form of
+incorporated or unincorporated legal entity. Topsport reserves the right to verify and exclude
 Customers from its services, if there are any doubts regarding the attainment of the minimum age
 required or applicants identity.
                                 </p>
@@ -74,14 +74,14 @@ personal nature, and is to be used purely for personal entertainment. Any commer
 interest is discarded.
                                 </p>
                                 <p class="mt-2">
-Topplaysport does not warrant the constant availability and functionality of all or any products offered
-by Topplaysport . Topplaysport may not be held liable and will be held harmless by the Customer for
+Topsport does not warrant the constant availability and functionality of all or any products offered
+by Topsport . Topsport may not be held liable and will be held harmless by the Customer for
 any damages, losses, costs, loss of profits or any other disadvantage a Customer may incur in connection
-with any disconnection from or the non-availability of any of the products offered by Topplaysport for
+with any disconnection from or the non-availability of any of the products offered by Topsport for
 whatever reason.
                                 </p>
                                 <p class="mt-2">
-                                    Topplaysport cannot be held liable in any case for any damage or loss caused directly or indirectly by
+                                    Topsport cannot be held liable in any case for any damage or loss caused directly or indirectly by
 the service or by its contents or by the contents provided by a third party, unless they are based on
 intentional or gross negligence.
                                 </p>
@@ -90,7 +90,7 @@ All indicated dates and times are based on WAT (West Africa Time) unless stipula
                                 </p>
                                 <p class="mt-2">
 Any exception to the existing Terms of Use will be communicated in written form to the Customer. Any
-verbal statement made by Topplaysport employees or affiliates will not be considered in case of a
+verbal statement made by Topsport employees or affiliates will not be considered in case of a
 dispute.
                                 </p>
                                 <p class="mt-2">
@@ -108,7 +108,7 @@ In a case of a tie in the top ten winners, the cash reward will be split amongst
                                 </p>
                                 <h4 class="text-uppercase mt-2">AMENDMENTS TO THE TERMS OF USE</h4>
                                 <p class="mt-2">
-The Terms of Use can be changed at any time by Topplaysport at its own discretion. All changes will
+The Terms of Use can be changed at any time by Topsport at its own discretion. All changes will
 become effective on their publication on our website.
                                 </p>
                                 <p class="mt-2">
@@ -121,8 +121,8 @@ been acknowledged.
                                 </p>
                                 <h4 class="text-uppercase mt-2">MANAGING AN ACCOUNT</h4>
                                 <p class="mt-2">
-Each Customer who wants to have access to services and products offered by Topplaysport must open
-an Account. In addition by opening a Topplaysport account and by playing the game the User confirms
+Each Customer who wants to have access to services and products offered by Topsport must open
+an Account. In addition by opening a Topsport account and by playing the game the User confirms
 that he or she retains the legal capacity to enter into an agreement with the Company. If one of these
 conditions is not respected the User's account will be closed and all other necessary measures will be
 implemented.
@@ -133,17 +133,17 @@ It is prohibited for Customers to buy, sell or transfer accounts to other Custom
                                 <p class="mt-2">
 When a new account is opened the Customer is responsible for the accuracy and up-to-datedness of all
 the personal information and contact details provided, including name and date of birth, address,
-telephone number and e-mail address. Topplaysport reserves the right to close the Account when the
+telephone number and e-mail address. Topsport reserves the right to close the Account when the
 information provided is deemed to be false or inaccurate.
                                 </p>
                                 <p class="mt-2">
 All personal data is stored in the database of the company and will not be passed on to third parties
-unless recurring the terms set out in the Privacy Policy Section. Topplaysport reserves the right to relay
+unless recurring the terms set out in the Privacy Policy Section. Topsport reserves the right to relay
 suspected offenders saved details to sporting bodies, authorities or any other third party, which deals with the investigation of offences concerning manipulation. (for our Privacy Policy, please visit the
 specific section).
                                 </p>
                                 <p class="mt-2">
-Every Customer may only open one account with us. Topplaysport retains the right to close the account
+Every Customer may only open one account with us. Topsport retains the right to close the account
 of any Customer who has opened multiple accounts under his/her name or under different names. If we
 have reasonable grounds to believe that multiple accounts (also under different names) have been
 opened with the intention of defrauding the Company, we retain the right to cancel any transaction
@@ -174,7 +174,7 @@ A closed Account may be reopened when requested by its owner and granted by the 
 circumstances, he/she will be subject to the Terms of Use that are in force at the date of the re-opening.
                                 </p>
                                 <p class="mt-2">
-Topplaysport retains the right to exclude Users from his services at its discretion. In this case we will
+Topsport retains the right to exclude Users from his services at its discretion. In this case we will
 refund the residual credit balance in the Account using the same payment method provided upon
 registration, or any other payment methods adopted subsequently by the customer upon their
 appropriate verification. If the Account has been closed due to an infringement pursuant to the Terms of
@@ -192,17 +192,17 @@ any period of six calendar months, his account shall be deemed to be Inactive.
                                 <h4 class="text-uppercase mt-2">DEPOSITS AND WITHDRAWALS</h4>
                                 <p class="mt-2">
 The Customer has the possibility to increase the credit balance of his Account with one of the payment
-methods made available by Topplaysport . The Customer warrants that he/she shall not use the payment methods that belong to any third party. Any deposits that are subject to the bonus promotion
+methods made available by Topsport . The Customer warrants that he/she shall not use the payment methods that belong to any third party. Any deposits that are subject to the bonus promotion
 offer will be regulated by the bonus promotion rules and may not be available for withdrawal. The
 Customer can withdraw the available credit balance of the Account using the same payment method
 provided upon registration, or any other payment method adopted subsequently by the customer once
 the full and appropriate verification has been completed.
                                 </p>
                                 <p class="mt-2">
-In order to perform any transaction, Topplaysport may undertake any such verification checks as may
+In order to perform any transaction, Topsport may undertake any such verification checks as may
 be required by ourselves or by third parties (including, but not limited to, regulatory bodies) to confirm
 the legal ownership and the origin of the money implicated, the identity of the applicant and to comply
-with the relevant Anti Money Laundering Provisions. Topplaysport may suspend the availability of any
+with the relevant Anti Money Laundering Provisions. Topsport may suspend the availability of any
 withdrawal method and/or the withdrawal function available in your account until the completion of the
 verification checks in relation to the validity of any of the documents you send and, in some limited
 circumstances, suspend any activity of your account it may deem necessary should it have reasonable
@@ -212,7 +212,7 @@ grounds to suspect or establishes the prohibited or illicit activity.
 In order to withdraw your money, you will be requested to send us a copy of your ID (front/rear).
 Whenever a transaction is made through bank transfer, credit card or electronic wallet, the first
 withdrawal request will be processed only after a security check has been performed and/or in any
-other circumstances Topplaysport may deem necessary (for example, large sum withdrawals). In such
+other circumstances Topsport may deem necessary (for example, large sum withdrawals). In such
 instances you may be required to supply any or all of the following documents together with the ID, in
 order to comply with our security policies:
                                 </p>
@@ -231,29 +231,29 @@ Full compliance with our requests will speed up the verification process.
                                 </p>
                                 <p class="mt-2">
 All withdrawals from Topplay accounts will be subject to audit before being processed. If the audit
-shows that the Customer has violated the provisions of the Terms of Use, Topplaysport may reclaim any
+shows that the Customer has violated the provisions of the Terms of Use, Topsport may reclaim any
 bonuses or winnings previously attributed.
                                 </p>
                                 <p class="mt-2">
 The Account is a deposit holding facility, current or savings account or any other financial product, shall
 not generate interest and the deposits are made into the Account for the purposes of genuine play.
-Topplaysport is under no obligation to repay money to the Customer as his/her debtor.
+Topsport is under no obligation to repay money to the Customer as his/her debtor.
                                 </p>
                                 <p class="mt-2">
-Topplaysport reserves the right to limit or to refuse predictions.
+Topsport reserves the right to limit or to refuse predictions.
                                 </p>
                                 <h4 class="text-uppercase mt-2">LEGAL USE OF THE WEBSITE AND OF ITS COMPONENTS</h4>
                                 <p class="mt-2">
 Under no circumstances shall the Website be used for any purpose different from personal
-entertainment without our express consent. Topplaysport is not liable for any attempts to use the
+entertainment without our express consent. Topsport is not liable for any attempts to use the
 services offered by means or ways not intended by us.
                                 </p>
                                 <p class="mt-2">
 All Trademarks, Domains, Terms of Use, Logos, Images and any other material used by or in
-Topplaysport's products (Ex. graphics, pictures, text etc.), as well as any other content or underlying
-idea that can be found within our Website, are owned by Topplaysport and protected by copyright in
+Topsport's products (Ex. graphics, pictures, text etc.), as well as any other content or underlying
+idea that can be found within our Website, are owned by Topsport and protected by copyright in
 their entirety and may not be modified, reproduced and redistributed, in whole or in part, without
-Topplaysport's express previous written permission. All necessary legal actions will be undertaken in
+Topsport's express previous written permission. All necessary legal actions will be undertaken in
 order to ensure compliance to this policy.
                                 </p>
                                 <p class="mt-2">
@@ -262,24 +262,24 @@ releasing or propagating viruses, worms or logic bombs or similar is strictly pr
 pursued to the fullest extent permitted by law.
                                 </p>
                                 <p class="mt-2">
-Topplaysport may at any time and without previous notice, remove or amend any product offered via
+Topsport may at any time and without previous notice, remove or amend any product offered via
 the Website, as well as alter available prices where such alterations do not affect events already in
 progress.
                                 </p>
                                 <p class="mt-2">
-Under some circumstances Topplaysport may provide its Customers with software designed internally
+Under some circumstances Topsport may provide its Customers with software designed internally
 or by third parties in order to optimize the functioning of the Website or to benefit from additional
 services. In such circumstances the Customer may be asked to accept further Terms and Conditions
 related to the utilization of the new component. Any attempt to interfere with, modify or reverse
 engineer any software provided is strictly prohibited.
                                 </p>
                                 <p class="mt-2">
-Topplaysport is not liable for any possible IT failures caused by the electronic equipment used by the
+Topsport is not liable for any possible IT failures caused by the electronic equipment used by the
 Customer while accessing the Website or for faults due to the internet service provider used by the
 Customer while accessing the Website.
                                 </p>
                                 <p class="mt-2">
-Topplaysport also assumes no liability for correctness, completeness or up-to-dateness of the
+Topsport also assumes no liability for correctness, completeness or up-to-dateness of the
 information services provided neither for the accuracy of statistics and intermediate results available in
 our website.
                                 </p>
@@ -301,7 +301,7 @@ loss or damage that may arise from their utilization.
                                 <p class="mt-2">
 If you wish to make a complaint or a suggestion regarding the Company, the Website or the services
 offered, as a first step you should contact our Customer Services or send us an email through
-info@Topplaysport.com. As second step, the complaint shall be assigned to an advisor that will manage
+info@Topsport.com. As second step, the complaint shall be assigned to an advisor that will manage
 to provide you with the appropriate response. Save as provided further under clause 3, should the
 complaint not be resolved as expected by you, a response shall be provided to you through internal
 message or email by the Customer Service Advisor who will report the final decision to you.
@@ -334,11 +334,11 @@ the other provisions of these Terms and Conditions which shall remain in full fo
                                 </p>
                                 <p class="mt-2">
 In such instances, the part declared invalid or unenforceable shall be amended in a manner consistent
-with the applicable law to reflect, as closely as possible, Topplaysport's original intent.
+with the applicable law to reflect, as closely as possible, Topsport's original intent.
                                 </p>
                                 <h4 class="text-uppercase mt-2">TERMINATION</h4>
                                 <p class="mt-2">
-Topplaysport shall have the right prior to accepting, temporarily suspend or permanently terminate, the
+Topsport shall have the right prior to accepting, temporarily suspend or permanently terminate, the
 provision of services to a Customer without providing any reason.
                                 </p>
                                 <p class="mt-2">
