--- a/trivia/templates/trivia/details.html
+++ b/trivia/templates/trivia/details.html
@@ -60,7 +60,7 @@
                                         </div>
                                         <div class="d-flex flex-column text-center">
                                             <div>Prize</div>
-                                            <div><span class="btn btn-success py-1 flat" style="cursor: text">&#8358; 1,000</span>
+                                            <div><span class="btn btn-success py-1 flat" style="cursor: text">&#8358; 200</span>
                                             </div>
                                         </div>
                                         <div class="d-flex flex-column align-items-center">
@@ -70,23 +70,24 @@
                                     </div>
                                     <ol class="mt-4 mb-3">
                                         <li>
-                                            <h6 class="f-400 text-left">1. What will be the total number of goals at full time?</h6>
+                                            <h6 class="f-400 text-left">1. What will be the total number of goals at full time?&nbsp;<i class="fa fa-futbol-o"></i></h6>
                                             <div class="d-flex justify-content-around">
                                                 <input type="tel" name="total_score" class="form-control col-4">
                                                 <!-- <input type="tel" name="team_b_score" class="form-control col-4"> -->
                                             </div>
                                         </li>
                                         <li class="mt-3">
-                                            <h6 class="f-400 text-left">2. What will be the total number of cards that will be given?</h6>
+                                            <h6 class="f-400 text-left">2. Total number of red cards given at Full time?&nbsp;
+                                                <i style="color:red;background:red;padding:2px" class="fa fa-square-o">i</i></h6>
                                             <div class="d-flex justify-content-around">
                                                 <input type="tel" name="total_cards" class="form-control col-4">
                                             </div>
                                         </li>
                                         <li class="mt-3">
-                                            <h6 class="f-400 text-left">3. Will there be a penalty kick in this game?</h6>
-                                            <div class="d-flex justify-content-around">
-                                                <input type="radio" name="penalty" value='YES' class="form-control col-2">YES
-                                                <input type="radio" name="penalty" value='NO' class="form-control col-2">NO
+                                            <h6 class="f-400 text-left">3. Will there be a penalty kick in this game?&nbsp;<i  class="fa fa-male fa-lg"></i></h6>
+                                            <div >
+                                                <input type="radio" name="penalty" value='YES' class="form-control col-2 btn btn-outline-primary">Yes
+                                                <input type="radio" name="penalty" value='NO' class="form-control col-2  btn btn-outline-primary" >No
                                             </div>
                                         </li>
                                     </ol>
