--- a/trivia/templates/trivia/entry.html
+++ b/trivia/templates/trivia/entry.html
@@ -53,7 +53,7 @@
                                         </div>
                                         <div class="d-flex flex-column text-center">
                                             <div>Prize</div>
-                                            <div><span class="btn btn-success py-1 flat" style="cursor: text">&#8358; 1,000</span>
+                                            <div><span class="btn btn-success py-1 flat" style="cursor: text">&#8358; 200</span>
                                             </div>
                                         </div>
                                         <div class="d-flex flex-column align-items-center">
@@ -64,7 +64,7 @@
                                     </div>
                                     <ol class="mt-4 mb-3">
                                         <li>
-                                            <h6 class="f-400 text-left">1. What Will be the Total number of goals at full time?</h6>
+                                            <h6 class="f-400 text-left">1. What Will be the Total number of goals at full time?&nbsp;<i class="fa fa-futbol-o"></i></h6>
                                             <div class="d-flex justify-content-around">
                                                 <input type="tel" name="total_score" class="form-control col-4
 {% if entry.question.status == 'resulted' %}
@@ -89,7 +89,7 @@ bg-success text-light
                                         </li>
                                         <!-- penalty area -->
                                         <li class="mt-3">
-                                            <h6 class="f-400 text-left">2. Will a penalty be given in this match at full time ?</h6>
+                                            <h6 class="f-400 text-left">2. Will a penalty be given in this match at full time ?&nbsp;<i  class="fa fa-male fa-2x"></i></h6>
                                             <div class="d-flex justify-content-around">
                                                 <input type="text" name="penalty" class="form-control col-4
 {% if entry.question.status == 'resulted' %}
@@ -109,12 +109,12 @@ bg-success text-light
                                             </div>
                                         {% if entry.question.status == 'resulted' %}
                                                 <div class="text-center my-2 {% if entry.question.penalty == entry.penaltya %}text-success{% else %}text-danger{% endif %}">
-                                                    : {{ entry.question.penalty }}</div>
+                                                   Result : {{ques_pen}}</div>
                                             {% endif %}
                                         </li>
                                         <li class="mt-3">
-                                            <h6 class="f-400 text-left">3. What will be the total cards given at
-                                                fulltime?</h6>
+                                            <h6 class="f-400 text-left">3. What will be the total red cards given at
+                                                fulltime?&nbsp;<i style="color:red;background:red;padding:1px" class="fa fa-square-o">i</i></h6>
                                             <div class="d-flex justify-content-around">
                                                 <input type="tel" name="total_corner_kicks" class="form-control col-4
 {% if entry.question.status == 'resulted' %}
