--- a/templates/how_to_play.html
+++ b/templates/how_to_play.html
@@ -177,7 +177,7 @@
                                                 <button class="btn btn-link" type="button" data-toggle="collapse"
                                                         data-target="#collapseFive" aria-expanded=false"
                                                         aria-controls="collapseFive"><i
-                                                        class="fa fa-question-circle"></i>THE WEEKEND GIVEAWAY
+                                                        class="fa fa-question-circle"></i>THE WEEKEND RAFFLE
                                                 </button>
                                             </h2>
                                         </div>
@@ -186,15 +186,15 @@
                                             <div class="card-body">
                                                 <p>
                                                 <li class="mt-1">
-                                                    The free weekend giveaway is a loyalty reward program that
+                                                    The free weekend raffle is a loyalty reward program that
                                                     rewards only users that have played a minimum of five (5) bet
                                                     slips within the week
                                                 </li>
                                                 <li class="mt-1">
-                                                    Only these users can qualify for the free weekend giveaway.
+                                                    Only users that select <b>Raffle</b> as their mode of reward can qualify for the free weekend giveaway.
                                                 </li>
                                                 <li class="mt-1">
-                                                    This giveaway is conducted as a raffle draw where the raffle
+                                                    This raffle
                                                     system randomly picks 20 of all qualified users to have a share
                                                     in a NGN20,000! (NGN1,000 each)
                                                 </li>
@@ -205,11 +205,8 @@
                                                 </li>
                                                 </p>
                                                 <p class="mt-1">
-                                                    <strong>NOTE: if a user plays up to 5 game slips within the week,
-                                                        apart
-                                                        from standing a chance to win NGN1,000 in the giveaway, that
-                                                        user also gets a guaranteed NGN200 in their bonus account
-                                                        instantly.</strong>
+                                                    <strong>NOTE:</strong> When a user plays 5 slips or more in week, this user is asked to choose between getting NGN100 in their bonus account
+                                                    or qualifying and entering into the raffle draw, only users that select the raffle will enter the draw
                                                 </p>
                                             </div>
                                         </div>
@@ -322,7 +319,7 @@
                                             <div class="card-body">
                                                 <p>
                                                 <li class="mt-1">
-                                                    Answer 3 questions correctly about a scheduled soccer match and win NGN 1,000 instantly into your
+                                                    Answer 3 questions correctly about a scheduled soccer match and win NGN 200 instantly into your
                                                     bonus account. 
                                                 </li>
                                                 <li class="mt-1">
