--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -151,27 +151,25 @@
                                                         data-target="#collapseFive" aria-expanded=false"
                                                         aria-controls="collapseFive"><i
                                                         class="fa fa-question-circle"></i>WHAT IS THE FREE WEEKEND
-                                                    GIVEAWAY?
+                                                    RAFFLE?
                                                 </button>
                                             </h2>
                                         </div>
                                         <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
                                              data-parent="#accordionExample2">
                                             <div class="card-body">
-                                                <p>The free weekend giveaway is a loyalty reward program and only users
+                                                <p>The free weekend raffle draw is a loyalty reward program and only users
                                                     that
                                                     have played a minimum of five (5) bet slips within the week can
                                                     qualify for the
-                                                    free weekend giveaway. The free weekend giveaway is a raffle draw
+                                                    free weekend raffle. The free weekend raffle draw
                                                     that occurs by 8pm (WAT) every Sunday. The raffle draw system
                                                     randomly selects
                                                     20 of all the qualified users to share in a NGN20,000 giveaway
                                                     prize!</p>
-                                                <p><strong>NOTE: if a user plays up to 5 game slips within the week,
-                                                    apart from standing
-                                                    a chance to win NGN1,000 in the giveaway, that user also gets a
-                                                    guaranteed
-                                                    NGN200 in their bonus account instantly.</strong></p>
+                                                <p><strong>NOTE:</strong> When a user plays 5 slips or more in week, this user is asked to choose between getting NGN100 in their bonus account
+                                                    or qualifying and entering into the raffle draw, only users that select the raffle will enter the draw.
+                                                </p>
                                             </div>
                                         </div>
                                     </div><!-- card end -->
@@ -189,7 +187,7 @@
                                              data-parent="#accordionExample2">
                                             <div class="card-body">
                                                 <p>If you do not have enough money to play the daily game, our soccer trivia has got you covered, all you need to do is
-to answer 3 questions correctly about one soccer game and win NGN1,000 to your bonus account
+to answer 3 questions correctly about one soccer game and win NGN200 to your bonus account
 instantly, you can now use this bonus to particpate in the daily games.</p>
                                             </div>
                                         </div>
