--- a/trivia/templates/trivia/index.html
+++ b/trivia/templates/trivia/index.html
@@ -25,7 +25,7 @@
                 <div class="alert alert-info">
                     <p>
                         Answer questions correctly from any match and win <span
-                            style="color:#008000">NGN200 </span> in your bonus instantly<br>
+                            style="color:#008000">NGN200 </span> in your bonus balance instantly<br>
                         <strong>Stake: <span style="color:red">Free</span></strong>
                     </p>
                     <i><strong>Note: </strong><span>You have a maximum of <b>4</b> free attempts daily</span></i>
@@ -77,15 +77,15 @@
                                     <div class="d-flex justify-content-between">
                                         <div class="d-flex flex-column align-items-center">
                                             <img src="{{ question.team_a_logo }}" class="mini-thumb text-center">
-                                            <span class="text-center">{{ question.team_a }}</span>
+                                            <span class="text-center">{{ question.team_a|truncatechars:8 }}</span>
                                         </div>
                                         <div class="d-flex flex-column text-center">
                                             <div>Prize</div>
-                                            <div><span class="btn btn-success py-1 flat" style="cursor: text">&#8358; 200</span></div>
+                                            <div><span class="btn btn-success btn-block" style="cursor: text;">&nbsp;&nbsp;&nbsp;&nbsp;&#8358; 200&nbsp;&nbsp;&nbsp;</span></div>
                                         </div>
                                         <div class="d-flex flex-column align-items-center">
                                             <img src="{{ question.team_b_logo }}" class="mini-thumb text-center">
-                                            <span class="text-center">{{ question.team_b }}</span>
+                                            <span class="text-center">{{ question.team_b|truncatechars:8  }}</span>
                                         </div>
                                     </div>
                                     <div class="mt-2 text-center">
