--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -51,7 +51,7 @@
     <meta property="og:image:type" content="image/png"/>
     {% if ref %}
         <meta property="og:description"
-              content="Come and join me and earn some cool cash on Topsport.com. Register with referral code: {{ ref }}"/>
+              content="Come and join me and earn some cool cash on Topsport.com.ng Register with referral code: {{ ref }}"/>
         <meta property="og:title" content="Want to be the next winner?"/>
         <meta property="og:url"
               content="{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{{ request.get_absolute_url }}/ref/{{ ref }}"/>
@@ -67,7 +67,7 @@
     <meta property="og:type" content="website"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <title>{% block page_title %} Welcome{% endblock %}</title>
-    <link rel="icon" href="{% static 'images/logos/favicon.ico' %}" type="image/x-icon"/>
+    <link rel="icon" href="{% static 'images/newfavicon.ico' %}" type="image/x-icon"/>
     <link href="//fonts.googleapis.com/css?family=Kanit:300,400,500,500i,600%7CRoboto:400,900" rel="stylesheet"
           type="text/css">
     <link href="{% static 'css/app.css' %}" rel="stylesheet" type="text/css" media="all">
