--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -23,7 +23,7 @@
             <li class="m-col-wrapper col-12 col-md-3">
                 <h6 class="m-col-title">Contact Us</h6>
                 <address class="m-col-content m-contact">
-                    <div>Email: support@topsport.com</div>
+                    <div>Email: support@topsport.com.ng</div>
                 </address>
             </li>
             <li class="m-col-wrapper m-l-right col-12 col-md-3">
