--- a/templates/support.html
+++ b/templates/support.html
@@ -116,19 +116,19 @@
                         <dl>
                             <dt>E-mail</dt>
                             <dd><span class="icon icon-primary mdi mdi-email-outline"></span><a class="link"
-                                                                                                href="mailto:support@topsport.com"><span
-                                    class="__cf_email__">support@topsport.com</span></a></dd>
+                                                                                                href="mailto:support@topsport.com.ng"><span
+                                    class="__cf_email__">support@topsport.com.ng</span></a></dd>
                         </dl>
                         <dl>
                             <dt>Social Media</dt>
                             <dd><ul class="list-inline list-inline-sm">
                                         <li><a class="icon-xs fa fa-facebook"
-                                               href="https://web.facebook.com/pg/Topplaysport-104500274229137/posts/?ref=page_internal"></a>
+                                               href="https://web.facebook.com/pg/Topsport-104500274229137/posts/?ref=page_internal"></a>
                                         </li>
                                         <li><a class="icon-xs fa fa-twitter"
-                                               href="https://mobile.twitter.com/Topplaysport_"></a></li>
+                                               href="https://mobile.twitter.com/Topsport_"></a></li>
                                         <li><a class="icon-xs fa fa-instagram"
-                                               href="https://www.instagram.com/topplaysport_/"></a></li>
+                                               href="https://www.instagram.com/topsport_/"></a></li>
                                     </ul></dd>
                         </dl>
                     </div>
