--- a/templates/terms.html
+++ b/templates/terms.html
@@ -40,7 +40,7 @@
                                 <h4 class="text-uppercase">General Terms and conditions</h4>
                                 <p class="mt-2">
 These general Terms and Conditions Terms and Conditions or T&amp;C) shall apply to all aspects of use of
-the website www.Topsport.com(the website), the Account and the services operated by Topsport
+the website www.Topsport.com,ng(the website), the Account and the services operated by Topsport
 Technologies (Topsport ) (a company duly organized under the laws of Nigeria, with business
 registration RC 1603870) via the website. Topsport shall offer it&#39;s services through various channels
 not limited to POS, SMS, USSD hereon referred to as the service.
