--- a/templates/site_admin/bonus-getters.html
+++ b/templates/site_admin/bonus-getters.html
@@ -1,5 +1,5 @@
 {% extends "site_admin/layouts/base.html" %}
-{% block page_title %}Admin - Qualified Players {% endblock %}
+{% block page_title %}Admin - bonus getters {% endblock %}
 {% load humanize %}
 {% block content %}
     <div class="container-fluid">
@@ -17,17 +17,11 @@
                         </div>
                     {% endfor %}
                 {% endif %}
-                
-                <div style='text-align:center;font-weight:bold'>
-                    <h3>Total number of all qualified players is <b style="color:green">{{qualified}}&nbsp;<i class="fa fa-users"></i></b></h3>
-                </div>
-                <div>
-                    <a class="btn btn-danger" href="{%url 'myadmin:bonus_getters' %}"> Users who selected bonus </a>
-                </div>
+
                 <div class="clearfix"></div>
                 <div class="card">
                     <div class="card-header card-header-primary">
-                        <h4 class="card-title ">Qualified Raffle Players&nbsp; ({{player_no}}&nbsp;<i class="fa fa-user"></i>)</h4>
+                        <h4 class="card-title ">Users that selected bonus &nbsp;({{player_no}}&nbsp;<i class="fa fa-user"></i>)</h4>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -39,20 +33,16 @@
                                 <th>
                                     Username
                                 </th>
-                                <th>
-                                    Raffle ID
-                                </th>
                                 </thead>
                                 <tbody>
                                 {% for player in players %}
                                     <tr>
                                         <td>{{ forloop.counter }}</td>
                                         <td>{{ player.user.username }}</td>
-                                        <td>{{ player.raffle_hash }}</td>
                                     </tr>
                                 {% empty %}
                                     <tr>
-                                        <td colspan="100%" class="text-center">No qualified raffle users available</td>
+                                        <td colspan="100%" class="text-center">No bonus users available</td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
